--- a/SemaphoreTest/SemaphoreTest.csproj
+++ b/SemaphoreTest/SemaphoreTest.csproj
@@ -46,14 +46,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Model\BindableBase.cs" />
+    <Compile Include="Model\MyTimedThread.cs" />
+    <Compile Include="Presenter\IPresenterMain.cs" />
+    <Compile Include="Presenter\IPresenterSemaphore.cs" />
+    <Compile Include="Presenter\PresenterMain.cs" />
+    <Compile Include="Presenter\PresenterSemaphore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\FormMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FormMain.Designer.cs">
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\IViewMain.cs" />
+    <Compile Include="View\IViewSemaphore.cs" />
+    <Compile Include="View\UctrlSemaphore.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\UctrlSemaphore.Designer.cs">
+      <DependentUpon>UctrlSemaphore.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +77,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\FormMain.resx">
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\UctrlSemaphore.resx">
+      <DependentUpon>UctrlSemaphore.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -76,6 +96,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
